# ChangeLog for net-www/webfs
# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-www/webfs/ChangeLog,v 1.4 2003/11/04 10:53:16 taviso Exp $

  04 Nov 2003; Tavis Ormandy <taviso@gentoo.org> webfs-1.20.ebuild:
  looks good on alpha.

*webfs-1.20 (30 Sep 2003)

  30 Sep 2003; Christian Birchinger <joker@gentoo.org> webfs-1.20.ebuild:
  Security update. Version bump

*webfs-1.19 (20 Jun 2003)

  20 Jun 2003; Christian Birchinger <joker@gentoo.org>
  webfs-1.19.ebuild:
  Initial release.