@@ -1,5 +1,4 @@
-MD5 d5f0152295e08ca7f9e101d14c82f851 webfs-1.19.ebuild 739
-MD5 742180fad7f7a71c5613aaa423c841ac webfs-1.20.ebuild 747
-MD5 3fb1fcaaceba347cc377453df4cf61d9 ChangeLog 556
-MD5 6626c317fb51b75548b49eda940e4897 files/digest-webfs-1.19 61
+MD5 1a8dd7c47030edc255a275422273c105 webfs-1.20.ebuild 743
+MD5 c339473e0ff43da76eb2f2607c441921 metadata.xml 280
+MD5 6b813d1566765e09b78c0a869752e489 ChangeLog 692
 MD5 579ace48be13da5a18919374112e42c3 files/digest-webfs-1.20 61
