@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-www/webfs/webfs-1.20.ebuild,v 1.2 2003/11/04 10:53:16 taviso Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-www/webfs/webfs-1.20.ebuild,v 1.3 2003/12/15 23:44:10 mholzer Exp $
 
 IUSE="ssl"
 
@@ -30,6 +30,6 @@ src_compile() {
 }
 
 src_install() {
-	einstall mandir=${D}/usr/share/man/man1
+	einstall mandir=${D}/usr/share/man
 	dodoc README COPYING
 }
